style: skip rest button no longer partially covered by navbar

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -31,6 +31,7 @@ button {
   width: 100%;
   border-radius: toRem(5);
   color: $primary;
+  background: $secondary;
 
   &:focus {
     outline: 2px solid $outline !important;
